Test autodeploy to heroku

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -11,7 +11,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
     <h1 class="govuk-heading-xl">
-      Recruit an apprentice / Find an apprentice design history - test deploy        
+      Recruit an apprentice / Find an apprentice design history  
     </h1>
   </div>
 </div>
