--- a/app/views/index.html
+++ b/app/views/index.html
@@ -11,7 +11,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
     <h1 class="govuk-heading-xl">
-      Recruit an apprentice / Find an apprentice design history  
+      Recruit an apprentice / Find an apprenticeship design history  
     </h1>
   </div>
 </div>
@@ -151,7 +151,7 @@
       {
         heading:
         {
-          text: "Link to archived prototype"
+          text: "Link to recruit-v2 prototype"
         },
         content:
         {
