--- a/app/views/v1/_summary.html
+++ b/app/views/v1/_summary.html
@@ -19,17 +19,22 @@
         </thead>
         <tbody class='govuk-table__body'>
           <tr class='govuk-table__row'>
-            <td class='govuk-table__cell'>Researching the building an initial concpet for the new APIs</td>
+            <td class='govuk-table__cell'>Researching the building an initial concept for the new APIs</td>
             <td class='govuk-table__cell'>The ESFA are building improved APIs to make it quicker and easier for users to advertise their apprenticeships on digital platforms</td>
           </tr>
         </tbody>
       </table>"
-    }) }}      
-    <ul class="govuk-list govuk-list--bullet">                              
-      <li><a href="https://miro.com/app/board/o9J_lqGAI0o=/" class="govuk-link govuk-link--no-visited-state">Design process (Miro)</a></li>
-      <li><a href="https://trello.com/c/jw8phPP1" class="govuk-link govuk-link--no-visited-state">#104 - Position and Design of the API registration entry point (Trello)</a></li>
-      <li><a href="v1/employer/dashboard.html" class="govuk-link govuk-link--no-visited-state">Employer journey</a></li>
-      <li><a href="v1/provider/account-home.html" class="govuk-link govuk-link--no-visited-state">Provider journey</a></li>
+    }) }}    
+    <ul class="govuk-list govuk-list--bullet">
+      <li>Recruitment APIs</li>  
+        <ul class="govuk-list govuk-list--bullet">                              
+          <li><a href="https://trello.com/c/jw8phPP1" class="govuk-link govuk-link--no-visited-state">#104 - Position and Design of the API registration entry point (Trello)</a></li>
+          <li><a href="https://trello.com/c/jjGCPgvm" class="govuk-link govuk-link--no-visited-state">#125 - Design Dev Hub for External users wanting to subscribe (Trello)</a></li> 
+          <li><a href="https://miro.com/app/board/o9J_lqGAI0o=/" class="govuk-link govuk-link--no-visited-state">Design board and user journey maps (Miro)</a></li>
+          <li><a href="v1/govuk/api" class="govuk-link govuk-link--no-visited-state">GOV.UK journey</a></li>     
+          <li><a href="v1/employer/dashboard.html" class="govuk-link govuk-link--no-visited-state">Employer journey</a></li>
+          <li><a href="v1/provider/account-home.html" class="govuk-link govuk-link--no-visited-state">Provider journey</a></li>
+        </ul>
     </ul>
   </div>
 </div>
