--- a/app/views/v1/employer/api/api.html
+++ b/app/views/v1/employer/api/api.html
@@ -1,7 +1,7 @@
-{% extends "tp-layout.html" %}
+{% extends "ma-layout.html" %}
 
 {% block pageTitle %}
-Get started with the recruitment API - Apprenticeships
+Get started with the recruitment API - Manage apprentices
 {% endblock %}
 {% block beforeContent %}
 <div class="govuk-grid-row">
@@ -16,17 +16,17 @@ Get started with the recruitment API - Apprenticeships
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-xl">Get started with the recruitment API</h1>
       <p class="govuk-body">
-        Integrating with our <a href="#" class="govuk-link govuk-link--no-visited-state">Recruitment API</a> may be useful if you want to create vacancies using your existing systems. It will allow you to publish to multiple sites, as well as <a href="#" class="govuk-link govuk-link--no-visited-state">Find an apprenticeship</a>.
+        Integrating with our <a href="#" class="govuk-link govuk-link--no-visited-state">Recruitment API</a> may be useful if you want to create adverts using your existing systems. It will allow you to publish to multiple sites, as well as <a href="#" class="govuk-link govuk-link--no-visited-state">Find an apprenticeship</a>.
         <br><br>
-        You can also use the <a href="#" class="govuk-link govuk-link--no-visited-state">Display adverts API</a> to display vacancies on any website.  
+        You can also use the <a href="#" class="govuk-link govuk-link--no-visited-state">Display adverts API</a> to display adverts on any website.  
       </p>
       <h2 class="govuk-heading-l">What does the API do?</h2> 
       <p class="govuk-body">
         APIs (Application Programming Interfaces) let applications share information and data with each other.
         <br><br>
-        If you connect using our <a href="#" class="govuk-link govuk-link--no-visited-state">Recruitment API</a>, you can use your own systems to create vacancies on <a href="#" class="govuk-link govuk-link--no-visited-state">Find an apprenticeship</a>. 
+        If you connect using our <a href="#" class="govuk-link govuk-link--no-visited-state">Recruitment API</a>, you can use your own systems to create adverts on <a href="#" class="govuk-link govuk-link--no-visited-state">Find an apprenticeship</a>. 
         <br><br>
-        You can also use our <a href="#" class="govuk-link govuk-link--no-visited-state">Display adverts API</a> to display your vacancies on any website.
+        You can also use our <a href="#" class="govuk-link govuk-link--no-visited-state">Display adverts API</a> to display your adverts on any website.
       </p>
       <h2 class="govuk-heading-l">How do I use the API?</h2> 
       <div class="govuk-inset-text">
@@ -38,9 +38,9 @@ Get started with the recruitment API - Apprenticeships
       <p class="govuk-body">
         It can take a while to connect using an API, so leave enough time to integrate it.
       </p>
-      <h2 class="govuk-heading-l">How do I access the API?</h2>      
+      <h2 class="govuk-heading-l">How do I access the API?</h2>
       <p class="govuk-body">
-        If you have owner permissions you can access the <a href="#" class="govuk-link govuk-link--no-visited-state">API keys</a>. 
+        If you have owner permissions you can access the <a href="api-hub" class="govuk-link govuk-link--no-visited-state">API keys</a>. 
         <br><br>
         Your developer will be able to try out the API using the sandbox provided.
         <br><br>
