--- a/docs/views/tutorials-and-examples.html
+++ b/docs/views/tutorials-and-examples.html
@@ -175,8 +175,8 @@
           </a>
         </li>
         <li>
-          <a href="/docs/templates/check-your-answers">
-            Check your answers
+          <a href="/docs/templates/check-answers">
+            Check answers
           </a>
         </li>
         <li>
