Trello 125 - created provider journey and other API amends

--- a/app/views/v1/govuk/api.html
+++ b/app/views/v1/govuk/api.html
@@ -32,17 +32,17 @@ Get started with the recruitment API - Apprenticeship services - GOV.UK
         It can take a while to connect using an API, so leave enough time to integrate it.
       </p>
       <h2 class="govuk-heading-l">How do I access the API?</h2>
-      <h3 class="govuk-heading-m">Accessing the Recruitment API and Display vacancies API using your apprentice service account</h3>
+      <h3 class="govuk-heading-m">Accessing the Recruitment API and Display vacancies API using your Apprenticeship service account</h3>
       <p class="govuk-body">
-        If you have owner permissions you can log in to your apprentice service account to access the API keys. 
+        If you have owner permissions you can log in to your Apprenticeship service account to access the API keys. 
         <br><br>
         Your developer will be able to try out the API using the sandbox provided.
       </p>
-      <h3 class="govuk-heading-m">Accessing the Display vacancies API without an apprentice service account</h3>
+      <h3 class="govuk-heading-m">Accessing the Display vacancies API without an Apprenticeship service account</h3>
       <p class="govuk-body">
-        You <a href="#" class="govuk-link govuk-link--no-visited-state">need to register</a> to access the API key.
+        You <a href="register" class="govuk-link govuk-link--no-visited-state">need to register or sign in</a> to access the API key.
         <br><br>
-        You will need to <a href="#" class="govuk-link govuk-link--no-visited-state">provide your developer with a key</a> so they can use the API.
+        You will need to provide your developer with a key so they can use the API.
         <br><br>
         Your developer will be able to try out the API using the sandbox provided.
       </p>
