Trello 125 - created provider journey and other API amends

--- a/app/views/v1/provider/api/api.html
+++ b/app/views/v1/provider/api/api.html
@@ -33,7 +33,7 @@ Get started with the recruitment API - Manage apprentices
         You'll need someone with technical knowledge to connect your software program with the API, for example a software developer. 
       </div>
       <p class="govuk-body">
-        You can share this <a href="#" class="govuk-link govuk-link--no-visited-state">API page</a> with the person who is going to connect your software program with the API.         
+        You can share this <a href="api-list" class="govuk-link govuk-link--no-visited-state">API page</a> with the person who is going to connect your software program with the API.         
       </p>
       <p class="govuk-body">
         It can take a while to connect using an API, so leave enough time to integrate it.
