--- a/app/views/v1/_summary.html
+++ b/app/views/v1/_summary.html
@@ -26,14 +26,19 @@
       </table>"
     }) }}    
     <ul class="govuk-list govuk-list--bullet">
-      <li>Recruitment APIs</li>  
-        <ul class="govuk-list govuk-list--bullet">                              
+      <li>EPIC: Recruitment APIs</li>
+        <ul class="govuk-list govuk-list--bullet">  
+          <p class="govuk-body govuk-!-margin-top-4" style="margin-bottom:10px;">Tickets</p>                            
           <li><a href="https://trello.com/c/jw8phPP1" class="govuk-link govuk-link--no-visited-state">#104 - Position and Design of the API registration entry point (Trello)</a></li>
           <li><a href="https://trello.com/c/jjGCPgvm" class="govuk-link govuk-link--no-visited-state">#125 - Design Dev Hub for External users wanting to subscribe (Trello)</a></li> 
+          <p class="govuk-body govuk-!-margin-top-4" style="margin-bottom:10px;">Design artefacts</p>                            
           <li><a href="https://miro.com/app/board/o9J_lqGAI0o=/" class="govuk-link govuk-link--no-visited-state">Design board and user journey maps (Miro)</a></li>
-          <li><a href="v1/govuk/api" class="govuk-link govuk-link--no-visited-state">GOV.UK journey</a></li>     
-          <li><a href="v1/employer/dashboard.html" class="govuk-link govuk-link--no-visited-state">Employer journey</a></li>
-          <li><a href="v1/provider/account-home.html" class="govuk-link govuk-link--no-visited-state">Provider journey</a></li>
+          <p class="govuk-body govuk-!-margin-top-4" style="margin-bottom:10px;">Copy docs</p>
+          <li><a href="https://miro.com/app/board/o9J_lqGAI0o=/" class="govuk-link govuk-link--no-visited-state">Design board and user journey maps (Miro)</a></li>                                      
+          <p class="govuk-body govuk-!-margin-top-4" style="margin-bottom:10px;">Prototype entry points</p>                            
+          <li><a href="v1/guidance/api" class="govuk-link govuk-link--no-visited-state">gov.uk guidance</a></li>     
+          <li><a href="v1/employer/dashboard.html" class="govuk-link govuk-link--no-visited-state">Employer service (post-signin)</a></li>
+          <li><a href="v1/provider/account-home.html" class="govuk-link govuk-link--no-visited-state">Provider service (post-signin)</a></li>
         </ul>
     </ul>
   </div>
