--- a/app/views/v1/guidance/api.html
+++ b/app/views/v1/guidance/api.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "mainstream-guide.html" %}
 
 {% block pageTitle %}
 Get started with the recruitment API - Apprenticeship services - GOV.UK
@@ -26,7 +26,7 @@ Get started with the recruitment API - Apprenticeship services - GOV.UK
         You'll need someone with technical knowledge to connect your software program with the API, for example a software developer. 
       </div>
       <p class="govuk-body">
-        You can share this <a href="#" class="govuk-link govuk-link--no-visited-state">API page</a> with the person who is going to connect your software program with the API.         
+        You can share this <a href="api-list" class="govuk-link govuk-link--no-visited-state">API page</a> with the person who is going to connect your software program with the API.         
       </p>
       <p class="govuk-body">
         It can take a while to connect using an API, so leave enough time to integrate it.
@@ -35,6 +35,8 @@ Get started with the recruitment API - Apprenticeship services - GOV.UK
       <h3 class="govuk-heading-m">Accessing the Recruitment API and Display vacancies API using your Apprenticeship service account</h3>
       <p class="govuk-body">
         If you have owner permissions you can log in to your Apprenticeship service account to access the API keys. 
+        <br><br>
+        You will need to <a href="#" class="govuk-link govuk-link--no-visited-state">provide your developer with a key</a> so they can use the API.
         <br><br>
         Your developer will be able to try out the API using the sandbox provided.
       </p>
