--- a/app/views/v1/guidance/registered.html
+++ b/app/views/v1/guidance/registered.html
@@ -17,14 +17,9 @@
 		</h1>	
 		<p class="govuk-body">You are now able to access the display advert API key.</p>	
 		
-		<!--{{ govukButton({
-			text: "Send API key",
-			href: "api-hub"
-		}) }}-->
-		
 		{{ govukButton({
 			text: "Continue",
-			href: "display-advert-api"
+			href: "display-adverts-api-key"
 		}) }}
 
 	</div>
