Trello 125 - fixed Provider link

--- a/app/views/v1/_summary.html
+++ b/app/views/v1/_summary.html
@@ -34,7 +34,7 @@
           <p class="govuk-body govuk-!-margin-top-4" style="margin-bottom:10px;">Design artefacts</p>                            
           <li><a href="https://miro.com/app/board/o9J_lqGAI0o=/" class="govuk-link govuk-link--no-visited-state">Design board and user journey maps (Miro)</a></li>
           <p class="govuk-body govuk-!-margin-top-4" style="margin-bottom:10px;">Copy docs</p>
-          <li><a href="https://miro.com/app/board/o9J_lqGAI0o=/" class="govuk-link govuk-link--no-visited-state">Design board and user journey maps (Miro)</a></li>                                      
+          <li><a href="" class="govuk-link govuk-link--no-visited-state">Copy doc #1</a></li>
           <p class="govuk-body govuk-!-margin-top-4" style="margin-bottom:10px;">Prototype entry points</p>                            
           <li><a href="v1/guidance/api" class="govuk-link govuk-link--no-visited-state">gov.uk guidance</a></li>     
           <li><a href="v1/employer/dashboard.html" class="govuk-link govuk-link--no-visited-state">Employer service (post-signin)</a></li>
