--- a/app/views/v1/employer/api/api-confirm-key.html
+++ b/app/views/v1/employer/api/api-confirm-key.html
@@ -48,7 +48,8 @@ Confirm renewal of API key - Manage apprenticeships - GOV.UK
 
       <p>
         {{ govukButton ({
-          text: "Continue"
+          text: "Continue",
+          href: "api-hub-new-key"
         })}}
       </p>
     </form>
