--- a/app/views/v1/guidance/api-hub-copied.html
+++ b/app/views/v1/guidance/api-hub-copied.html
@@ -17,7 +17,7 @@ API key copied - API hub - Manage apprenticeships - GOV.UK
     {{ govukPanel({
       titleText: "Key copied"      
     }) }}
-        <h1 class="govuk-heading-xl">Create keys for APIs</h1>
+        <h1 class="govuk-heading-xl">Create key for API</h1>
           <p class="govuk-body">
             You need to copy a key and give it to your developer, this gives them permission to connect to the API on your behalf.
           </p>
