--- a/app/views/v1/guidance/registered.html
+++ b/app/views/v1/guidance/registered.html
@@ -15,7 +15,7 @@
 		<h1 class="govuk-heading-xl">
 			Registered successfully
 		</h1>	
-		<p class="govuk-body">You are now able to access the display advert API key.</p>	
+		<p class="govuk-body">You are now able to access the Display adverts API key.</p>	
 		
 		{{ govukButton({
 			text: "Continue",
