--- a/app/views/v1/provider/api/api-confirm-key.html
+++ b/app/views/v1/provider/api/api-confirm-key.html
@@ -45,7 +45,8 @@ Confirm renewal of API key - Apprenticeships - GOV.UK
 
       <p>
         {{ govukButton ({
-          text: "Continue"
+          text: "Continue",
+          href: "api-hub-new-key"
         })}}
       </p>
     </form>
