--- a/app/views/v1/guidance/register.html
+++ b/app/views/v1/guidance/register.html
@@ -2,6 +2,10 @@
 
 {% set currentPage = "register" %}
 
+{% block pageTitle %}
+Create an account using your email address - Apprenticeship services - GOV.UK
+{% endblock %}
+
 {% block beforeContent %}
 {{ govukBackLink({
   text: "Back",
@@ -13,10 +17,10 @@
 <div class="govuk-grid-row">
 	<div class="govuk-grid-column-two-thirds">
 		<h1 class="govuk-heading-xl">
-			Register using your email address
+			Create an account using your email address
 		</h1>		
 		<p class="govuk-body">
-			Register with your email address to access the display advert API key.<br>
+			Create an account with your email address to access the Display advert API key.<br><br>
 			If you have an account, <a href="login" class="govuk-link govuk-link--no-visited-state">sign in</a>.
 		</p>
 		<form method="post" >
@@ -72,8 +76,8 @@
 			<input type="hidden" value="true" name="registered">
 
 			{{ govukButton({
-				text: "Register",
-				href: "email"
+				text: "Create account",
+				href: "awaiting-confirmation"
 			}) }}
 		</form>
 
