--- a/app/views/v1/provider/account-home.html
+++ b/app/views/v1/provider/account-home.html
@@ -71,7 +71,7 @@
 
 					<div class="govuk-grid-column-one-half">
 						<h2 class="govuk-heading-m">
-							<a href="#" class="govuk-link govuk-link--no-visited-state">Recruit apprentices</a>
+							<a href="dashboard" class="govuk-link govuk-link--no-visited-state">Recruit apprentices</a>
 						</h2>
 						<p>Create a vacancy to recruit an apprentice and manage applications.</p>
 					</div>
