--- a/app/views/v1/guidance/api.html
+++ b/app/views/v1/guidance/api.html
@@ -9,17 +9,17 @@ Get started with the recruitment API - Apprenticeship services - GOV.UK
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-xl">Get started with the recruitment API</h1>
       <p class="govuk-body">
-        Integrating with our <a href="#" class="govuk-link govuk-link--no-visited-state">Recruitment API</a> may be useful if you want to create adverts using your existing systems. It will allow you to publish to multiple sites, as well as <a href="#" class="govuk-link govuk-link--no-visited-state">Find an apprenticeship</a>.
+        Integrating with our <a href="recruitment-api-documentation" class="govuk-link govuk-link--no-visited-state">Recruitment API</a> may be useful if you want to create adverts using your existing systems. It will allow you to publish to multiple sites, as well as <a href="#" class="govuk-link govuk-link--no-visited-state">Find an apprenticeship</a>.
         <br><br>
-        You can also use the <a href="#" class="govuk-link govuk-link--no-visited-state">Display adverts API</a> to display adverts on any website.  
+        You can also use the <a href="display-adverts-api-documentation" class="govuk-link govuk-link--no-visited-state">Display adverts API</a> to display adverts on any website.  
       </p>
       <h2 class="govuk-heading-l">What does the API do?</h2> 
       <p class="govuk-body">
         APIs (Application Programming Interfaces) let applications share information and data with each other.
         <br><br>
-        If you connect using our <a href="#" class="govuk-link govuk-link--no-visited-state">Recruitment API</a>, you can use your own systems to create adverts on <a href="#" class="govuk-link govuk-link--no-visited-state">Find an apprenticeship</a>. 
+        If you connect using our <a href="recruitment-api-documentation" class="govuk-link govuk-link--no-visited-state">Recruitment API</a>, you can use your own systems to create adverts on <a href="#" class="govuk-link govuk-link--no-visited-state">Find an apprenticeship</a>. 
         <br><br>
-        You can also use our <a href="#" class="govuk-link govuk-link--no-visited-state">Display adverts API</a> to display your adverts on any website.
+        You can also use our <a href="display-adverts-api-documentation" class="govuk-link govuk-link--no-visited-state">Display adverts API</a> to display your adverts on any website.
       </p>
       <h2 class="govuk-heading-l">How do I use the API?</h2> 
       <div class="govuk-inset-text">
