--- a/app/views/v1/guidance/registered.html
+++ b/app/views/v1/guidance/registered.html
@@ -2,6 +2,10 @@
 
 {% set currentPage = "registered" %}
 
+{% block pageTitle %}
+Account created - Apprenticeship services - GOV.UK
+{% endblock %}
+
 {% block beforeContent %}
 {{ govukBackLink({
   text: "Back",
@@ -13,12 +17,12 @@
 <div class="govuk-grid-row">
 	<div class="govuk-grid-column-two-thirds">
 		<h1 class="govuk-heading-xl">
-			Registered successfully
+			Account created
 		</h1>	
-		<p class="govuk-body">You are now able to access the Display adverts API key.</p>	
+		<p class="govuk-body">You are now able to access the Display advert API key.</p>	
 		
 		{{ govukButton({
-			text: "Continue",
+			text: "Access API key",
 			href: "display-adverts-api-key"
 		}) }}
 
