Trello 125 - Amend to Provider are you sure screen

--- a/app/views/v1/provider/api/api-confirm-key.html
+++ b/app/views/v1/provider/api/api-confirm-key.html
@@ -27,10 +27,13 @@ Confirm renewal of API key - Apprenticeships - GOV.UK
             classes: "govuk-fieldset__legend--xl govuk-!-margin-bottom-6"
           }
         },
+        hint: {
+          text: "Renewing the key will disable the previous key and will stop your API from working until you use the new key."
+        },
         items: [
         {
           value: "yes",
-          text: "Yes, renew the key",
+          text: "Yes",
           attributes:
           {
             required: required
@@ -38,7 +41,7 @@ Confirm renewal of API key - Apprenticeships - GOV.UK
         },
         {
           value: "no",
-          text: "No, don't renew"
+          text: "No"
         }
         ]
       }) }}
