--- a/app/views/v1/employer/api/api-confirm-key.html
+++ b/app/views/v1/employer/api/api-confirm-key.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "ma-layout.html" %}
 
 {% block pageTitle %}
 Confirm renewal of API key - Manage apprenticeships - GOV.UK
