--- a/app/views/v1/guidance/register.html
+++ b/app/views/v1/guidance/register.html
@@ -3,7 +3,7 @@
 {% set currentPage = "register" %}
 
 {% block pageTitle %}
-Create an account using your email address - Apprenticeship services - GOV.UK
+Create an account - Apprenticeship services - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -17,10 +17,10 @@ Create an account using your email address - Apprenticeship services - GOV.UK
 <div class="govuk-grid-row">
 	<div class="govuk-grid-column-two-thirds">
 		<h1 class="govuk-heading-xl">
-			Create an account using your email address
+			Create an account
 		</h1>		
 		<p class="govuk-body">
-			Create an account with your email address to access the Display advert API key.<br><br>
+			Create an account to access the Display advert API key.<br><br>
 			If you have an account, <a href="login" class="govuk-link govuk-link--no-visited-state">sign in</a>.
 		</p>
 		<form method="post" >
