#124 FAA - Start page content update

--- a/app/views/v2/_summary.html
+++ b/app/views/v2/_summary.html
@@ -28,8 +28,9 @@
     <ul class="govuk-list govuk-list--bullet">
       <h3 class="govuk-heading-m">EPIC: Recruitment APIs</h3>
         <ul class="govuk-list govuk-list--bullet">  
-          <h4 class="govuk-heading-s govuk-!-margin-top-4" style="margin-bottom:10px;">Tickets</h4>                            
-          <li><a href="https://trello.com/c/jw8phPP1" class="govuk-link govuk-link--no-visited-state">#1XX - (Trello)</a></li>          
+          <h4 class="govuk-heading-s govuk-!-margin-top-4" style="margin-bottom:10px;">Tickets</h4>                         
+          <li><a href="https://trello.com/c/rbzR3aei" class="govuk-link govuk-link--no-visited-state">#129 - API permissions (Trello)</a></li>   
+          <li><a href="https://trello.com/c/po0R1ggS" class="govuk-link govuk-link--no-visited-state">#128 - API subscription (Trello)</a></li>          
           <h4 class="govuk-heading-s govuk-!-margin-top-4" style="margin-bottom:10px;">Design artefacts</h4>                            
           <li><a href="https://miro.com/app/board/o9J_lqGAI0o=/" class="govuk-link govuk-link--no-visited-state">Design board (Miro)</a></li>
           <h4 class="govuk-heading-s govuk-!-margin-top-4" style="margin-bottom:10px;">Copy docs</h4>
