--- a/app/views/v2/guidance/api.html
+++ b/app/views/v2/guidance/api.html
@@ -1,4 +1,4 @@
-{% extends "mainstream-guide.html" %}
+{% extends "layout.html" %}
 
 {% block pageTitle %}
 Get started with the recruitment API - Apprenticeship services - GOV.UK
