--- a/app/views/v2/employer/api/api.html
+++ b/app/views/v2/employer/api/api.html
@@ -40,7 +40,7 @@ Get started with the recruitment API - Manage apprentices
       </p>
       <h2 class="govuk-heading-l">How do I access the API?</h2>
       <p class="govuk-body">
-        If you have owner permissions you can access the <a href="api-hub" class="govuk-link govuk-link--no-visited-state">API keys</a>. 
+        If you have owner permissions you can access the <a href="api-list" class="govuk-link govuk-link--no-visited-state">API keys</a>. 
         <br><br>
         Your developer will be able to try out the API using the sandbox provided.
         <br><br>
